--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "https-proxy-agent": "^7.0.6",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
